--- a/app.json
+++ b/app.json
@@ -207,17 +207,17 @@
     },
     "TG_BOT_USER_NAME_BF_HER": {
       "description": "Needed for inline buttons maker. Make a bot at [BotFather](http://telegram.dog/BotFather) and get the username of your bot",
-      "value": ""
+      "value": "",
       "required": true
     },
     "TG_BOT_TOKEN_BF_HER": {
       "description": "Needed for inline buttons maker. Make a bot at [BotFather](http://telegram.dog/BotFather) and get the token of your bot. And Don't Forget To Turn of inline Mode on bot settings. Get it.",
-      "value": ""
+      "value": "",
       "required": true
     },
     "INLINE_MODE": {
       "description": "Needed for inline buttons maker. Make a bot at [BotFather](http://telegram.dog/BotFather) and Turn of inline Mode on bot settings. Get it.",
-      "value": "True"
+      "value": "True",
       "required": true
     },
   },
