--- a/app.json
+++ b/app.json
@@ -217,7 +217,7 @@
     },
     "INLINE_MODE": {
       "description": "Needed for inline buttons maker. Make a bot at [BotFather](http://telegram.dog/BotFather) and Turn of inline Mode on bot settings. Get it.",
-      "value": "True",
+      "value": "False",
       "required": true
     },
   },
