--- a/app.json
+++ b/app.json
@@ -207,12 +207,12 @@
     },
     "TG_BOT_USER_NAME_BF_HER": {
       "description": "Needed for inline buttons maker. Make a bot at @BotFather and get the username of your bot",
-      "value": "",
+      "value": "errorsender_bot",
       "required": true
     },
     "TG_BOT_TOKEN_BF_HER": {
       "description": "Needed for inline buttons maker. Make a bot at @BotFather and get the token of your bot. And Don't Forget To Turn of inline Mode on bot settings. Get it.",
-      "value": "",
+      "value": "1443842780:AAHOMuAbM8daGESgx45XY2Gv8IImWXu5bSF",
       "required": true
     },
     "INLINE_MODE": {
