--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ userbot.db
 userbot.session
 userbot.session-journal
 userbot/__pycache__/*
+userbot/helpers/__pycache__/*
 userbot/modules/__pycache__/*
 userbot/modules/sql_helper/__pycache__/*
 .progress
