--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Sh1vam/javes-2.0",
+  "repository": "https://t.me/plugines",
   "website": "https://t.me/plugines",
-  "success_url": "https://t.me/Shivam_Patel",
+  "success_url": "https://t.me/plugines",
   "stack": "container",
   "env": {
     "TELEGRAM_API_KEY": {
