--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://t.me/plugines",
+  "repository": "https://github.com/Sh1vam/javes-2.0",
   "website": "https://t.me/plugines",
   "success_url": "https://t.me/plugines",
   "stack": "container",
