--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ userbot.session
 userbot.session-journal
 userbot/__pycache__/*
 userbot/helpers/__pycache__/*
+userbot/helpers/resources/__pycache__/*
 userbot/modules/__pycache__/*
 userbot/modules/sql_helper/__pycache__/*
 .progress
