--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "javes-2.0",
-  "description": "",
-  "logo": "",
+  "description": "Try On Your Own Hehehehehehehehehehehehe",
+  "logo": "https://telegra.ph/file/8e5138dfc400730a2396c.jpg",
   "keywords": [
     "telegram",
     "userbot",
